--- a/src/css/customised-bootstrap.scss
+++ b/src/css/customised-bootstrap.scss
@@ -40,6 +40,9 @@ $form-check-input-border: 1px solid tint-color($contrast2, 20%);
 
 $form-switch-focus-color: rgba(0, 0, 0, .25);
 
+$btn-close-padding-x: .5em;
+$btn-close-padding-x: .5em;
+
 $modal-content-bg: $body-bg;
 $modal-header-border-color: $contrast2;
 $modal-backdrop-opacity: .7;
