--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 $sidebar-width: 216px;
 $sidebar-gap: 1.1rem;
 $sidebar-left-pad: 1.3rem;
+
 $main-x-pad: 1rem;
 $main-y-pad: 2rem;
 
@@ -19,8 +20,220 @@ body {
 */
 .wrapper {
   min-height: 100%;
-  max-width: 1350px;
 }
+
+/*
+  Header
+*/
+$header-height: 90px;
+
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: $header-height;
+  z-index: 199;
+  background: $page-bg;
+  padding: 1.2rem $main-x-pad;
+  border-bottom: 1px solid $contrast1;
+}
+.header__row {
+  position: relative;
+  z-index: 1;
+}
+.header__logo,
+.header__actions {
+  flex-grow: 0;
+  white-space: nowrap;
+}
+.is-searchable .header__logo,
+.is-searchable .header__actions {
+  position: absolute;
+  z-index: 0;
+}
+.header__logo {
+  padding-left: $sidebar-left-pad;
+
+  @include media-breakpoint-up(md) {
+    width: calc(#{$sidebar-width} + #{$sidebar-gap} + #{$main-x-pad});
+    flex: 0 0 auto;
+  }
+}
+.header__search {
+  max-width: 720px;
+
+  @include media-breakpoint-up(sm) {
+    padding-left: 0;
+  }
+}
+.header__actions {
+  margin-left: auto;
+}
+
+.header__action-btn__txt {
+  display: none;
+
+  @include media-breakpoint-up(lg) {
+    display: inline;
+  }
+}
+
+
+
+.header__open-sidebar {
+  margin-top: -.15em;
+  margin-left: -$btn-close-padding-x;
+
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
+}
+
+/*
+  Search
+*/
+
+.search {
+  text-align: right;
+
+  @include media-breakpoint-up(xs) {
+    position: static;
+  }
+}
+
+.search__field {
+  display: none;
+  text-align: left;
+  position: relative;
+  z-index: 2;
+
+  @include media-breakpoint-up(sm) {
+    display: block;
+  }
+}
+.is-searchable .search__field {
+  display: block;
+}
+.search__field-show {
+  @include media-breakpoint-up(sm) {
+    display: none;
+  }
+}
+.is-searchable .search__field-show {
+  @include visually-hidden();
+  @include visually-hidden-focusable();
+}
+
+.search__field-hide {
+  position: absolute;
+  z-index: 10;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-color: transparent;
+
+  @include media-breakpoint-up(sm) {
+    display: none;
+  }
+}
+.is-suggesting .search__field-hide {
+  border-bottom-left-radius: 0;
+}
+
+.search__field-hide > svg.bi {
+  position: relative;
+  top: -.15em;
+}
+
+.search__input {
+  padding-left: calc(3rem + .2em);
+
+  @include media-breakpoint-up(sm) {
+    padding-left: $input-padding-x-lg;
+  }
+}
+.is-suggesting .search__input {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.search__field:focus-within .search__input {
+  box-shadow: $input-focus-box-shadow;
+  border-color: $input-focus-border-color;
+  background: $input-focus-bg;
+  color: $input-focus-color;
+}
+
+.search-dumb-mq-tester {
+  display: none;
+
+  @include media-breakpoint-up(sm) {
+    display: block;
+  }
+}
+.search__suggest,
+.search__suggest::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  border-bottom-left-radius: $input-border-radius-lg;
+  border-bottom-right-radius: $input-border-radius-lg;
+}
+.search__suggest {
+  display: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  //top: calc(100% + #{$input-border-width});
+  top: 100%;
+}
+.is-suggesting .search__suggest {
+  display: block;
+}
+.search__suggest::after {
+  content: '';
+  z-index: -1;
+  bottom: 0;
+  top: calc(2 * #{$input-btn-focus-width});
+  box-shadow: $input-focus-box-shadow;
+  transition: $input-transition;
+}
+
+.search__suggest-item {
+  border-color: $contrast1;
+}
+.search__suggest-item,
+.search__suggest-item:hover,
+.search__suggest-item:focus,
+.search__suggest-item.is-selected {
+  color: $page-text-color;
+}
+.search__suggest-item {
+  background-color: $contrast2;
+  padding-left: $input-padding-x-lg;
+  padding-right: $input-padding-x-lg;
+}
+
+.search__suggest-item:hover,
+.search__suggest-item:focus,
+.search__suggest-item.is-selected {
+  background-color: $contrast1;
+}
+
+.search__suggest-item:focus-visible {
+  outline: 0;
+  box-shadow: $input-btn-focus-box-shadow;
+}
+
+
+/*
+   Content
+*/
+.content {
+  padding: calc(#{$header-height} + #{$main-y-pad}) $main-x-pad;
+}
+
 
 /*
     Sidebar
@@ -33,7 +246,7 @@ $sidebar-animation-duration: .2s;
   width: $sidebar-width;
   max-width: 100%;
   position: fixed;
-  z-index: 202;
+  z-index: 201;
   left: 0;
   top: 0;
   bottom: 0;
@@ -50,6 +263,9 @@ $sidebar-animation-duration: .2s;
     visibility: visible;
     transform: translateX(0);
     transition: none;
+    top: calc(#{$header-height} + #{$main-y-pad});
+    background: none;
+    box-shadow: none;
   }
 }
 .sidebar.is-open {
@@ -58,8 +274,19 @@ $sidebar-animation-duration: .2s;
 }
 
 .sidebar__head {
-  margin-bottom: 1.5rem;
-  position: relative;
+  padding: 1rem .5rem;
+  text-align: right;
+
+  @include media-breakpoint-up(md) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.sidebar__close {
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
 }
 
 .sidebar__body {
@@ -68,24 +295,10 @@ $sidebar-animation-duration: .2s;
   -webkit-overflow-scrolling: touch;
 }
 
-.sidebar__close {
-  position: absolute;
-  z-index: 2;
-  right: .55rem;
-  margin-top: -.05em;
-  display: none;
-}
-.sidebar.is-open .sidebar__close {
-  display: inline-block;
-
-  @include media-breakpoint-up(md) {
-    display: none;
-  }
-}
 
 .sidebar-backdrop {
   position: fixed;
-  z-index: 201;
+  z-index: 200;
   left: 0;
   top: 0;
   bottom: 0;
@@ -114,61 +327,20 @@ $sidebar-animation-duration: .2s;
 }
 
 /*
-  Navigation heading with hamburger menu trigger and main `<h1>`
-*/
-$nav-heading-top-shift: -2px; // needed for monitoring stuck state via JS
-
-.nav-heading {
-  position: sticky;
-  left: .4rem;
-  top: $nav-heading-top-shift;
-  z-index: 200;
-  background: $page-bg;
-  margin: -1.2rem (-$main-x-pad) .2rem;
-  padding: calc(1.2rem + #{$nav-heading-top-shift}) $main-x-pad;
-
-  @include media-breakpoint-up(md) {
-    position: relative;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-@-moz-document url-prefix() {
-  .nav-heading {
-    margin: -1.2rem calc(#{-$main-x-pad} + 0.9px) .2rem;
-
-    @include media-breakpoint-up(md) {
-      margin-left: 0;
-      margin-right: 0;
-    }
-  }
-}
-.nav-heading.is-stuck {
-  box-shadow: 0 .5rem 1rem rgba($black, .45);
-
-  @include media-breakpoint-up(md) {
-    box-shadow: none;
-  }
-}
-.nav-heading__open {
-  margin-top: -.15em;
-  margin-left: -$btn-close-padding-x;
-
-  @include media-breakpoint-up(md) {
-    display: none;
-  }
-}
-
-/*
     Logo
 */
 .logo {
-  padding: 1rem 2rem 0.5rem $sidebar-left-pad;
-  margin-bottom: 1rem;
-}
+  text-transform: none;
+  //font-size: 1.5rem;
+  padding-left: .5rem;
+  padding-right: .5rem;
 
+  @include media-breakpoint-up(md) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: -1rem;
+  }
+}
 /*
     Navigation
 */
@@ -188,9 +360,13 @@ $nav-heading-top-shift: -2px; // needed for monitoring stuck state via JS
 .navigation__item:not(.active):hover,
 .navigation__item:not(.active):focus {
   background-color: $page-bg;
+
+  @include media-breakpoint-up(md) {
+    background-color: $contrast1;
+  }
 }
 
-.navigation__item:focus {
+.navigation__item:focus-visible {
   outline: 0;
   box-shadow: $input-btn-focus-box-shadow;
 }
@@ -206,58 +382,12 @@ $nav-heading-top-shift: -2px; // needed for monitoring stuck state via JS
 */
 .main {
   position: relative;
-  padding: $main-y-pad $main-x-pad;
   margin-left: 0;
 
   @include media-breakpoint-up(md) {
     margin-left: calc(#{$sidebar-width} + #{$sidebar-gap});
   }
 }
-
-/*
-    Allow special input handlers to be within a reach on a wide screen
-*/
-input[type="datetime-local"].form-control,
-input[type="time"].form-control,
-input[type="number"].form-control {
-  max-width: 100%;
-}
-
-input[type="datetime-local"].form-control {
-  width: 200px;
-}
-
-input[type="number"].form-control,
-input[type="time"].form-control {
-  width: 110px;
-}
-
-/*
-    Sorting switch
-*/
-.sorting-switch {
-  position: relative;
-}
-
-.sorting-switch_sidebar {
-  margin-left: $sidebar-left-pad;
-}
-
-.sorting-switch__label {
-  margin-top: .12em;
-}
-
-.sorting-switch__spinner {
-  position: absolute;
-  top: .31em;
-  margin-left: .5em;
-  display: none;
-}
-
-.sorting-switch.is-pending .sorting-switch__spinner {
-  display: inline-block;
-}
-
 
 /*
     Menu button
@@ -280,7 +410,7 @@ input[type="time"].form-control {
     opacity: $btn-close-hover-opacity;
   }
 
-  &:focus {
+  &:focus-visible {
     outline: 0;
     box-shadow: $btn-close-focus-shadow;
     opacity: $btn-close-focus-opacity;
@@ -292,89 +422,6 @@ input[type="time"].form-control {
     user-select: none;
     opacity: $btn-close-disabled-opacity;
   }
-}
-
-/*
-  Reset bootstrap card on narrow screens
-*/
-@include media-breakpoint-down(sm) {
-  .card_0 {
-    border: none;
-    background: none;
-    border-bottom: 1px solid $contrast2;
-  }
-  .card_0:last-of-type {
-    border-bottom: none;
-  }
-  .card_0 > .card-body {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-  }
-  .card_0:last-of-type > .card-body  {
-    padding-bottom: 0;
-  }
-}
-
-/*
-  Permission columns
-*/
-
-.permission-column {
-  flex-basis: 100%;
-
-  @media screen and (min-width: 640px) {
-    & {
-      flex-basis: 50%;
-    }
-  }
-
-  @include media-breakpoint-up(md) {
-    & {
-      flex-basis: 100%;
-    }
-  }
-
-  @media screen and (min-width: 880px) {
-    & {
-      flex-basis: 50%;
-    }
-  }
-}
-
-/*
-  Responsive tables
-*/
-.table-responsive-wrap {
-  position: relative;
-}
-.table-responsive-wrap::before,
-.table-responsive-wrap::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 1;
-  width: 10px;
-  pointer-events: none;
-  transition: opacity .2s;
-  opacity: 0;
-  background-repeat: no-repeat;
-  background-size: 1px 100%,5px 100%
-}
-.table-responsive-wrap::before {
-  left: 0;
-  background-image: linear-gradient(transparent,rgba(0,0,0,.6) 25%,rgba(0,0,0,.7) 75%,transparent),radial-gradient(farthest-side at 0 50%,rgba(0,0,0,.8),transparent);
-  background-position:0 0,0 0;
-}
-.table-responsive-wrap::after {
-  right: 0;
-  background-image: linear-gradient(transparent,rgba(0,0,0,.6) 25%,rgba(0,0,0,.7) 75%,transparent),radial-gradient(farthest-side at 100% 50%,rgba(0,0,0,.8),transparent);
-  background-position:100% 0,100% 0;
-}
-.table-responsive-wrap.is-overflown_left::before,
-.table-responsive-wrap.is-overflown_right::after {
-  opacity: 1;
 }
 
 /*
@@ -402,4 +449,41 @@ input[type="time"].form-control {
 .form-check_standalone > .form-check-input {
   margin-left: 0;
   margin-right: 0;
+}
+
+/*
+  Gallery
+*/
+
+.pig-figure {
+  background-color: $contrast1 !important;
+}
+
+/*
+  Custom scrollbar
+*/
+
+$scrollbar-size: 16px;
+$scrollbar-track-color: transparent;
+$scrollbar-thumb-color: #666;
+
+html,
+.scrollbar {
+  scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;
+}
+html::-webkit-scrollbar,
+.scrollbar::-webkit-scrollbar {
+  width: $scrollbar-size;
+  height: $scrollbar-size;
+}
+html::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb {
+  background: $scrollbar-thumb-color;
+  border-radius: $scrollbar-size;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+html::-webkit-scrollbar-track,
+.scrollbar::-webkit-scrollbar-track {
+  background: $scrollbar-track-color;
 }
