--- a/src/css/customised-bootstrap.scss
+++ b/src/css/customised-bootstrap.scss
@@ -1,5 +1,5 @@
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/functions";
 
 // 1.1 Include your custom variables needed prior bootstrap default variable overrides
 $contrast1: #333333;
@@ -62,48 +62,48 @@ $table-border-color: $contrast1;
 $alert-margin-bottom: 1.2rem;
 
 // 3. Include remainder of required Bootstrap stylesheets
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/mixins";
-@import "bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/utilities";
 
 // 4. Include any optional Bootstrap components as you like
 // Layout & components
-@import "bootstrap/scss/root";
-@import "bootstrap/scss/reboot";
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/containers";
-@import "bootstrap/scss/grid";
-@import "bootstrap/scss/tables";
-@import "bootstrap/scss/forms";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-@import "bootstrap/scss/dropdown";
-@import "bootstrap/scss/button-group";
-@import "bootstrap/scss/nav";
-@import "bootstrap/scss/navbar";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/accordion";
-@import "bootstrap/scss/breadcrumb";
-@import "bootstrap/scss/pagination";
-@import "bootstrap/scss/badge";
-@import "bootstrap/scss/alert";
-@import "bootstrap/scss/progress";
-@import "bootstrap/scss/list-group";
-@import "bootstrap/scss/close";
-@import "bootstrap/scss/toasts";
-@import "bootstrap/scss/modal";
-@import "bootstrap/scss/tooltip";
-@import "bootstrap/scss/popover";
-@import "bootstrap/scss/carousel";
-@import "bootstrap/scss/spinners";
-@import "bootstrap/scss/offcanvas";
+@import "node_modules/bootstrap/scss/root";
+@import "node_modules/bootstrap/scss/reboot";
+@import "node_modules/bootstrap/scss/type";
+@import "node_modules/bootstrap/scss/images";
+@import "node_modules/bootstrap/scss/containers";
+@import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/tables";
+@import "node_modules/bootstrap/scss/forms";
+@import "node_modules/bootstrap/scss/buttons";
+@import "node_modules/bootstrap/scss/transitions";
+@import "node_modules/bootstrap/scss/dropdown";
+@import "node_modules/bootstrap/scss/button-group";
+@import "node_modules/bootstrap/scss/nav";
+@import "node_modules/bootstrap/scss/navbar";
+@import "node_modules/bootstrap/scss/card";
+@import "node_modules/bootstrap/scss/accordion";
+@import "node_modules/bootstrap/scss/breadcrumb";
+@import "node_modules/bootstrap/scss/pagination";
+@import "node_modules/bootstrap/scss/badge";
+@import "node_modules/bootstrap/scss/alert";
+@import "node_modules/bootstrap/scss/progress";
+@import "node_modules/bootstrap/scss/list-group";
+@import "node_modules/bootstrap/scss/close";
+@import "node_modules/bootstrap/scss/toasts";
+@import "node_modules/bootstrap/scss/modal";
+@import "node_modules/bootstrap/scss/tooltip";
+@import "node_modules/bootstrap/scss/popover";
+@import "node_modules/bootstrap/scss/carousel";
+@import "node_modules/bootstrap/scss/spinners";
+@import "node_modules/bootstrap/scss/offcanvas";
 
 // Helpers
-@import "bootstrap/scss/helpers";
+@import "node_modules/bootstrap/scss/helpers";
 
 // Utilities
-@import "bootstrap/scss/utilities/api";
+@import "node_modules/bootstrap/scss/utilities/api";
 
 // 5. Add additional custom code here
 
@@ -157,6 +157,26 @@ video[controls]:not([tabindex^="-"]):focus:not(:focus-visible),
 [contenteditable]:not([tabindex^="-"]):focus:not(:focus-visible),
 [tabindex]:not([tabindex^="-"]):focus:not(:focus-visible) {
   box-shadow: none !important;
+}
+
+/*
+  Define generic transition for all focusable elements
+*/
+a[href]:not([tabindex^="-"]),
+area[href]:not([tabindex^="-"]),
+button:not([disabled]):not([tabindex^="-"]),
+iframe:not([tabindex^="-"]),
+audio[controls]:not([tabindex^="-"]),
+video[controls]:not([tabindex^="-"]),
+[tabindex]:not([tabindex^="-"]) {
+  @include transition($btn-transition);
+}
+input:not([type="hidden"]):not([type="radio"]):not([disabled]):not([tabindex^="-"]),
+input[type="radio"]:not([disabled]):not([tabindex^="-"]):checked,
+select:not([disabled]):not([tabindex^="-"]),
+textarea:not([disabled]):not([tabindex^="-"]),
+[contenteditable]:not([tabindex^="-"]) {
+  @include transition($input-transition);
 }
 
 /*
